<resources>
    <string name="app_name">Paw</string>
    <string name="logo_desc">logo of the app</string>
    <string name="timer">Timer</string>
    <string name="identify_the_breed">Identify the Breed</string>
    <string name="identify_the_dog">Identify the Dog</string>
    <string name="search_dog_breed">Search Dog Breed</string>
    <string name="ok">OK</string>
    <string name="correct">Correct</string>
    <string name="correct_image">correct image</string>
    <string name="logo">logo</string>
    <string name="background_image">background_image</string>
    <string name="wrong_image">wrong_image</string>
    <string name="wrong">Wrong</string>
    <string name="correct_answer_image">correct_answer_image</string>
    <string name="correct_image_text">Correct Image</string>
    <string name="image_of_a_dog">Image of a dog</string>
    <string name="select_image_text">Select the breed this picture belongs to..</string>
    <string name="submit">SUBMIT</string>
    <string name="identify_the_dog_text">Identify the dog belongs to this breed</string>
    <string name="imageoption_1">imageOption 1</string>
    <string name="imageoption_2">imageOption 2</string>
    <string name="imageoption_3">imageOption 3</string>
    <string name="enter_name_text">Enter the breed name you want to search for :</string>
    <string name="breed_name">Breed Name</string>
    <string name="stop">STOP</string>
    <string name="grade">grade</string>
    <string name="wromg_answer_image">wrong answer image</string>
    <string-array name="breed_names">
        <item>Afghan Hound</item>
        <item>Briard</item>
        <item>Bull Mastiff</item>
        <item>Chow</item>
        <item>Collie</item>
        <item>Eskimo</item>
        <item>French Bulldog</item>
        <item>Goldern Retriever</item>
        <item>German Shepherd</item>
        <item>Japanese Spaniel</item>
        <item>Komondor</item>
        <item>Labrador Retriever</item>
        <item>Malamute</item>
        <item>Malinois</item>
        <item>Norwegian Elkhound</item>
        <item>Papillon</item>
        <item>Pembroke</item>
        <item>Pomeranian</item>
        <item>Pug</item>
        <item>Samoyed</item>
        <item>Siberian Husky</item>
        <item>Shetland Sheepdog</item>
        <item>Sussex Spaniel</item>
        <item>White Terrier</item>
    </string-array>
</resources>
